deployment/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ista
  labels:
    name: ip-services
    environment: production
